kubernetes/ingress/smart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: smart-ingress
  namespace: smart-devops

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:

  ingressClassName: nginx

  rules:
    - host: smart.local

      http:
        paths:

          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: backend-service

                port:
                  number: 8081

          - path: /(.*)
            pathType: ImplementationSpecific

            backend:
              service:
                name: frontend-service

                port:
                  number: 80
